# proyecto_jnetech

./: CMakeLists.txt  Cliente.cpp  Cliente.h  Desarrollador.cpp  Desarrollador.h  Empleado.cpp  Empleado.h  Fecha.cpp  Fecha.h  GerenteProyecto.cpp  GerenteProyecto.h  Hora.cpp  Hora.h  Proyecto.cpp  Proyecto.h  README.md  Reporte.cpp  Reporte.h  ReunionSeguimiento.cpp  ReunionSeguimiento.h  Tarea.cpp  Tarea.h  Tester.cpp  Tester.h  main.cpp
