cmake_minimum_required(VERSION 3.24)
project(PROYECTO_JNETECH_)

set(CMAKE_CXX_STANDARD 17)

add_executable(PROYECTO_JNETECH_ main.cpp Cliente.cpp Cliente.h Desarrollador.cpp Desarrollador.h Empleado.cpp Empleado.h Fecha.cpp Fecha.h GerenteProyecto.cpp GerenteProyecto.h Hora.cpp Hora.h Proyecto.cpp Proyecto.h Reporte.cpp Reporte.h ReunionSeguimiento.cpp ReunionSeguimiento.h Tarea.cpp Tarea.h Tester.cpp Tester.h)
